<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="413dp"
        android:layout_height="54dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailfield"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/LogInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/LogInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:text="@string/loginPage"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_marginBottom="88dp"
        android:height="10dp"
        android:background="@android:color/transparent"
        android:text="Create a new user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/passwordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordfield"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/LogInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt" />

    <Button
        android:id="@+id/Guestbtn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:height="10dp"
        android:background="@android:color/transparent"
        android:text="Enter as a Guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn"
        app:layout_constraintVertical_bias="0.13" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>